--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,8 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
+          username: Princekumar1291
+          # username: ${{ github.actor }}
           password: ${{ secrets.CR_PAT }}
 
       - name: Extract metadata (tags, labels) for Docker GHCR
